# taxi-dispatch-system

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  test_curls.sh
client_service/: Dockerfile  pyproject.toml
client_service/app/: main.py  settings.py  simulator.py
common/: logger.py  pyproject.toml  schemas.py
dispatcher_service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
dispatcher_service/app/: main.py  settings.py
dispatcher_service/app/adapters/: crud.py  database.py  http_client.py
dispatcher_service/app/api/: dependencies.py
dispatcher_service/app/api/routers/: events.py  orders.py  taxis.py  view.py
dispatcher_service/app/background/: heartbeat_monitor.py
dispatcher_service/app/domain/: models.py  services.py  utils.py
dispatcher_service/migrations/: env.py
dispatcher_service/migrations/versions/: 73f721630312_init.py
dispatcher_service/tests/: conftest.py
dispatcher_service/tests/intergration/: test_events.py  test_health.py  test_heartbeat.py  test_orders.py  test_taxis.py  test_trips.py
dispatcher_service/tests/unit/: test_crud.py  test_events_idempotency.py
docs/: api.md  architecture.md
grid_service/: Dockerfile  pyproject.toml
grid_service/app/: main.py
grid_service/app/static/: index.html
taxi_service/: Dockerfile  pyproject.toml
taxi_service/app/: main.py  settings.py
taxi_service/app/adapters/: http_client.py
taxi_service/app/api/: dependencies.py  registration.py
taxi_service/app/api/routers/: assign.py
taxi_service/app/background/: heartbeat.py
taxi_service/app/domain/: schemas.py
taxi_service/app/services/: callback.py  simulation.py
taxi_service/tests/: conftest.py  test_assign_and_startup.py
