[project]
name = "taxi-service"
version = "0.1.0"
description = "Minimal taxi microservice that registers and handles assignments"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.117.1",
  "uvicorn[standard]>=0.37.0",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "anyio>=4.4",
  "tenacity>=9.0",
  "common>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
